force-app/main/default/objects/Opportunity/fields/hed__Desired_Start_Term__c.field-meta.xml
<CustomField>
    <fullName>hed__Desired_Start_Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The desired term to start enrollment related to this Opportunity.</description>
    <inlineHelpText>The desired term to start enrollment related to this Opportunity.</inlineHelpText>
    <label>Desired Start Term</label>
    <referenceTo>hed__Term__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>