force-app/main/default/objects/Opportunity/fields/Indicateur_Montant__c.field-meta.xml
<CustomField>
    <fullName>Indicateur_Montant__c</fullName>
    <formula>IF(
 Amount &lt;&gt;  Somme_Montant_Ech_ancier__c ,
Image(&quot;/resource/information&quot;,&quot;Image indisponible&quot;,18,18)
, &quot;&quot;)</formula>
    <inlineHelpText>Si le montant est différent de la somme des montants de l&apos;échéanciers, le panneau s&apos;affiche.</inlineHelpText>
    <label>Indicateur Montant</label>
    <type>Text</type>
</CustomField>