force-app/main/default/objects/Opportunity/fields/Information_session__c.field-meta.xml
<CustomField>
    <fullName>Information_session__c</fullName>
    <description>Utilisé pour les devis</description>
    <label>Information session</label>
    <length>80</length>
    <type>Text</type>
</CustomField>