force-app/main/default/objects/Opportunity/fields/InterfaceExternalId__c.field-meta.xml
<CustomField>
    <fullName>InterfaceExternalId__c</fullName>
    <externalId>true</externalId>
    <label>InterfaceExternalId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>