force-app/main/default/objects/Opportunity/fields/Jour_date_de_rentr_e_cloture__c.field-meta.xml
<CustomField>
    <fullName>Jour_date_de_rentr_e_cloture__c</fullName>
    <formula>RIGHT(TEXT(CloseDate),2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Jour date de rentrée / cloture</label>
    <type>Text</type>
</CustomField>