force-app/main/default/objects/Opportunity/fields/Libelle_Groupe__c.field-meta.xml
<CustomField>
    <fullName>Libelle_Groupe__c</fullName>
    <description>Libellé du Groupe</description>
    <formula>Account.Libell_du_groupe__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Groupe</label>
    <type>Text</type>
</CustomField>