force-app/main/default/objects/Opportunity/fields/Liste_des_participants__c.field-meta.xml
<CustomField>
    <fullName>Liste_des_participants__c</fullName>
    <label>Liste des participants</label>
    <length>10255</length>
    <type>LongTextArea</type>
</CustomField>