force-app/main/default/objects/Opportunity/fields/Localisation__c.field-meta.xml
<CustomField>
    <fullName>Localisation__c</fullName>
    <label>Localisation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ecully</fullName>
            </value>
            <value>
                <fullName>Shanghai</fullName>
            </value>
            <value>
                <fullName>Paris</fullName>
            </value>
            <value>
                <fullName>Casa</fullName>
            </value>
            <value>
                <fullName>Sur site de l’entreprise</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Saint Etienne</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>