force-app/main/default/objects/Opportunity/fields/Marge_Previsionnelle__c.field-meta.xml
<CustomField>
    <fullName>Marge_Previsionnelle__c</fullName>
    <inlineHelpText>Non calculée automatiquement. A renseigner.</inlineHelpText>
    <label>Marge Prévisionnelle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>