force-app/main/default/objects/Opportunity/fields/Mode_de_financement3__c.field-meta.xml
<CustomField>
    <fullName>Mode_de_financement3__c</fullName>
    <label>Mode_de_financement3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Alumni</fullName>
            </value>
            <value>
                <fullName>A titre individuel</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
            <value>
                <fullName>Bourse</fullName>
            </value>
            <value>
                <fullName>Bourse étudiante</fullName>
            </value>
            <value>
                <fullName>CIF</fullName>
            </value>
            <value>
                <fullName>CIF hors temps de travail</fullName>
            </value>
            <value>
                <fullName>CIF temps de travail</fullName>
            </value>
            <value>
                <fullName>CPF</fullName>
            </value>
            <value>
                <fullName>DIF</fullName>
            </value>
            <value>
                <fullName>Entreprise</fullName>
            </value>
            <value>
                <fullName>Financement Opca</fullName>
            </value>
            <value>
                <fullName>Par les parents</fullName>
            </value>
            <value>
                <fullName>Plan de formation</fullName>
            </value>
            <value>
                <fullName>Prise en charge direct entreprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>