force-app/main/default/objects/Opportunity/fields/Mois_date_de_rentr_e_cloture__c.field-meta.xml
<CustomField>
    <fullName>Mois_date_de_rentr_e_cloture__c</fullName>
    <formula>MID(TEXT(CloseDate),6,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mois date de rentrée / cloture</label>
    <type>Text</type>
</CustomField>