force-app/main/default/objects/Opportunity/fields/Montant_promesse__c.field-meta.xml
<CustomField>
    <fullName>Montant_promesse__c</fullName>
    <label>Montant promesse</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>