force-app/main/default/objects/Opportunity/fields/Motif_de_fermeture__c.field-meta.xml
<CustomField>
    <fullName>Motif_de_fermeture__c</fullName>
    <label>Motif de fermeture</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Abandon</fullName>
            </value>
            <value>
                <fullName>Abandon projet client</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
            <value>
                <fullName>Choisi école concurrente</fullName>
            </value>
            <value>
                <fullName>Choisi organisme concurrent</fullName>
            </value>
            <value>
                <fullName>Choix autre programme EMLYON</fullName>
            </value>
            <value>
                <fullName>Choix concurrence</fullName>
            </value>
            <value>
                <fullName>Concurrence</fullName>
            </value>
            <value>
                <fullName>Déçu par l&apos;Ecole</fullName>
            </value>
            <value>
                <fullName>Demande incohérente</fullName>
            </value>
            <value>
                <fullName>Etablissements non assujettis à la Taxe</fullName>
            </value>
            <value>
                <fullName>Etudiant</fullName>
            </value>
            <value>
                <fullName>Existe Déjà</fullName>
            </value>
            <value>
                <fullName>Financement - recherche alternance</fullName>
            </value>
            <value>
                <fullName>Hors profil</fullName>
            </value>
            <value>
                <fullName>Incapacité à répondre à la demande</fullName>
            </value>
            <value>
                <fullName>Injoignable</fullName>
            </value>
            <value>
                <fullName>Investissement trop élevé</fullName>
            </value>
            <value>
                <fullName>Motif budgétaire</fullName>
            </value>
            <value>
                <fullName>Ne correspond pas aux attentes</fullName>
            </value>
            <value>
                <fullName>Ne répond pas à la sollicitation</fullName>
            </value>
            <value>
                <fullName>Non éligible</fullName>
            </value>
            <value>
                <fullName>Offre non adaptée</fullName>
            </value>
            <value>
                <fullName>Pas convaincu</fullName>
            </value>
            <value>
                <fullName>Pas de budget</fullName>
            </value>
            <value>
                <fullName>Pas de place disponible</fullName>
            </value>
            <value>
                <fullName>Pas d’argent pour mon école</fullName>
            </value>
            <value>
                <fullName>Pas école cible</fullName>
            </value>
            <value>
                <fullName>Pas intéressé</fullName>
            </value>
            <value>
                <fullName>Pas pour le moment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>