force-app/main/default/objects/Opportunity/fields/Motif_gratuite__c.field-meta.xml
<CustomField>
    <fullName>Motif_gratuite__c</fullName>
    <inlineHelpText>Champ dépendant du mode de financement &quot;A titre gratuit&quot;</inlineHelpText>
    <label>Motif de gratuité</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Mode_de_financement__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Module complémentaire au programme initiale</fullName>
            </value>
            <value>
                <fullName>Remerciement</fullName>
            </value>
            <value>
                <fullName>Offre commerciale BtB</fullName>
            </value>
            <value>
                <fullName>Geste commercial (insatisfaction)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>