force-app/main/default/objects/Opportunity/fields/Moyen_de_paiement__c.field-meta.xml
<CustomField>
    <fullName>Moyen_de_paiement__c</fullName>
    <label>Moyen de paiement</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Vehicule__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Chèque</fullName>
            </value>
            <value>
                <fullName>Don en ligne</fullName>
            </value>
            <value>
                <fullName>Virement en ligne</fullName>
            </value>
            <value>
                <fullName>Prélèvement automatique</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>