force-app/main/default/objects/Opportunity/fields/Nature_du_soutien_financier__c.field-meta.xml
<CustomField>
    <fullName>Nature_du_soutien_financier__c</fullName>
    <description>Champs utilisé uniquement dans le process Fundraising B2B.</description>
    <label>Nature du soutien financier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sponsoring</fullName>
            </value>
            <value>
                <fullName>Mécénat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>