force-app/main/default/objects/Opportunity/fields/Nb_Opportunite_active__c.field-meta.xml
<CustomField>
    <fullName>Nb_Opportunite_active__c</fullName>
    <formula>IF(Opportunite_active__c = true, 1, 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nb Opportunité active</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>