force-app/main/default/objects/Opportunity/fields/Nb_PO__c.field-meta.xml
<CustomField>
    <fullName>Nb_PO__c</fullName>
    <label>Nb PO</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>