force-app/main/default/objects/Opportunity/fields/Niveau_d_exp_rience_professionnelle__c.field-meta.xml
<CustomField>
    <fullName>Niveau_d_exp_rience_professionnelle__c</fullName>
    <formula>TEXT(Contact_central__r.Niveau_d_exp_rience__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Niveau d&apos;expérience professionnelle</label>
    <type>Text</type>
</CustomField>