force-app/main/default/objects/Opportunity/fields/Niveau_d_tudes__c.field-meta.xml
<CustomField>
    <fullName>Niveau_d_tudes__c</fullName>
    <formula>TEXT(Contact_central__r.Niveau_d_tudes__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Niveau d&apos;études</label>
    <type>Text</type>
</CustomField>