force-app/main/default/objects/Opportunity/fields/Nom_Prenom__c.field-meta.xml
<CustomField>
    <fullName>Nom_Prenom__c</fullName>
    <formula>Contact_central__r.Nom_Prenom__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nom Prénom</label>
    <type>Text</type>
</CustomField>