force-app/main/default/objects/Opportunity/fields/Nombre_d_heures__c.field-meta.xml
<CustomField>
    <fullName>Nombre_d_heures__c</fullName>
    <label>Nombre d&apos;heures</label>
    <summarizedField>OpportunityLineItem.Nombre_d_heures__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.NB_d_heure_et_jour_calculer__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>