force-app/main/default/objects/Opportunity/fields/Nombre_d_opportunit_qualifi_es_en_cours__c.field-meta.xml
<CustomField>
    <fullName>Nombre_d_opportunit_qualifi_es_en_cours__c</fullName>
    <formula>Contact_central__r.nb_SIP_en_cours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre d&apos;opportunité qualifiées en cours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>