force-app/main/default/objects/Opportunity/fields/Nombre_d_opportunites_du_compte__c.field-meta.xml
<CustomField>
    <fullName>Nombre_d_opportunites_du_compte__c</fullName>
    <formula>Account.Nombre_opportunites__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre d&apos;opportunités du compte</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>