force-app/main/default/objects/Opportunity/fields/Nombre_de_jours__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_jours__c</fullName>
    <description>utilisé pour les devis formation courtes</description>
    <label>Nombre de jours</label>
    <summarizedField>OpportunityLineItem.Nombre_de_jours__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.NB_d_heure_et_jour_calculer__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>