force-app/main/default/objects/Opportunity/fields/Nombre_de_participants_cible__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_participants_cible__c</fullName>
    <label>Nombre de participants cible</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>