force-app/main/default/objects/Opportunity/fields/Nombre_de_produits__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_produits__c</fullName>
    <description>Permet de savoir si l&apos;opportunité possède un produit (sert pour règle de validation sur opportunité)</description>
    <label>Nombre de produits</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>