force-app/main/default/objects/Opportunity/fields/Nombre_de_report__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_report__c</fullName>
    <description>Compteur de report à mettre à jour manuellement sur la nouvelle opportunité pour garder la trace du report</description>
    <inlineHelpText>Compteur de report à mettre à jour manuellement sur la nouvelle opportunité pour garder la trace du report</inlineHelpText>
    <label>Nombre de report</label>
    <length>2</length>
    <type>Text</type>
</CustomField>