force-app/main/default/objects/Opportunity/fields/Nombre_postes_de_type_parcours__c.field-meta.xml
<CustomField>
    <fullName>Nombre_postes_de_type_parcours__c</fullName>
    <label>Nombre postes de type pack</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Type_produit__c</field>
        <operation>equals</operation>
        <value>Pack</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>