force-app/main/default/objects/Opportunity/fields/Num_ro_de_versement__c.field-meta.xml
<CustomField>
    <fullName>Num_ro_de_versement__c</fullName>
    <label>Numéro de versement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>