force-app/main/default/objects/Opportunity/fields/OCTA__c.field-meta.xml
<CustomField>
    <fullName>OCTA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OCTA supposé</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Est_un_OCTA__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Taxe Opportunités</relationshipLabel>
    <relationshipName>Opportunites</relationshipName>
    <type>Lookup</type>
</CustomField>