force-app/main/default/objects/Opportunity/fields/Opportunite_active__c.field-meta.xml
<CustomField>
    <fullName>Opportunite_active__c</fullName>
    <formula>IF(
NOT(
OR(
ISPICKVAL (StageName, &quot;Clos (Perdu)&quot;),
ISPICKVAL (StageName, &quot;Compte doublon&quot;)
)
)
,
true,
false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunité active</label>
    <type>Checkbox</type>
</CustomField>