force-app/main/default/objects/Opportunity/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <formula>OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID Suiveur de l&apos;opportunité</label>
    <type>Text</type>
</CustomField>