force-app/main/default/objects/Opportunity/fields/P_riode__c.field-meta.xml
<CustomField>
    <fullName>P_riode__c</fullName>
    <formula>IF ( MONTH(CloseDate) &lt;= 8,TEXT(YEAR(CloseDate)),TEXT(YEAR(CloseDate)+1))
&amp;&quot;_P&quot;&amp;IF ( MONTH(CloseDate) &lt;= 3,&quot;2&quot;,IF ( MONTH(CloseDate) &lt;= 8,&quot;3&quot;,&quot;1&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Période</label>
    <type>Text</type>
</CustomField>