force-app/main/default/objects/Opportunity/fields/Parcours__c.field-meta.xml
<CustomField>
    <fullName>Parcours__c</fullName>
    <formula>Nombre_postes_de_type_parcours__c &gt;0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pack</label>
    <type>Checkbox</type>
</CustomField>