force-app/main/default/objects/Opportunity/fields/Participants__c.field-meta.xml
<CustomField>
    <fullName>Participants__c</fullName>
    <label>Participants</label>
    <length>250</length>
    <type>Text</type>
</CustomField>