force-app/main/default/objects/Opportunity/fields/Prescripteur__c.field-meta.xml
<CustomField>
    <fullName>Prescripteur__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Définit que l’opportunité est liée à un prescripteur</description>
    <label>Prescripteur</label>
    <type>Checkbox</type>
</CustomField>