force-app/main/default/objects/Opportunity/fields/Programme_chapeau__c.field-meta.xml
<CustomField>
    <fullName>Programme_chapeau__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Programme chapeau</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Opportunités</relationshipLabel>
    <relationshipName>Opportunit_s</relationshipName>
    <type>Lookup</type>
</CustomField>