force-app/main/default/objects/Opportunity/fields/Programme_de_reconnaissance_compte__c.field-meta.xml
<CustomField>
    <fullName>Programme_de_reconnaissance_compte__c</fullName>
    <formula>TEXT(Account.Programme_de_reconnaissance__c)</formula>
    <label>Programme de reconnaissance compte</label>
    <type>Text</type>
</CustomField>