force-app/main/default/objects/Opportunity/fields/Programme_de_reconnaissance_contact__c.field-meta.xml
<CustomField>
    <fullName>Programme_de_reconnaissance_contact__c</fullName>
    <formula>TEXT (Contact_central__r.Programme_de_reconnaissance__c )</formula>
    <label>Programme de reconnaissance</label>
    <type>Text</type>
</CustomField>